knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/pqcrush__RM_Org_Setting__c.object-meta.xml
<CustomObject>
    <label>RM Org Setting</label>
    <nameField>
        <label>RM_Org_Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RM_Org_Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>