knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Auto_Layout__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Auto_Layout__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to have the Relationship Map automatically layout the nodes. Uncheck to do this manually.</description>
    <inlineHelpText>Check this to have the Relationship Map automatically layout the nodes. Uncheck to do this manually.</inlineHelpText>
    <label>Auto Layout</label>
    <type>Checkbox</type>
</CustomField>