knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Card_Style__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Card_Style__c</fullName>
    <description>Select the detail level of the card.</description>
    <inlineHelpText>Select the detail level of the card.</inlineHelpText>
    <label>Card Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
                <default>true</default>
                <label>Detail</label>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>