knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Create_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Create_New_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create New Contact</label>
    <type>Checkbox</type>
</CustomField>