knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Enable_Drag_Select__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Enable_Drag_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this option to enable drag-select. To drag-select, click &amp; hold the mouse button for 2 seconds, then drag around objects to select them. Disable this option if you are experiencing issues with panning.</description>
    <inlineHelpText>Check this option to enable drag-select. To drag-select, click &amp; hold the mouse button for 2 seconds, then drag around objects to select them. Disable this option if you are experiencing issues with panning.</inlineHelpText>
    <label>Enable Drag Select</label>
    <type>Checkbox</type>
</CustomField>