knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Enable_Group_Selection_Context_Menu__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Enable_Group_Selection_Context_Menu__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag for the abilty to create and adjust groups in the Relationship Map</description>
    <inlineHelpText>Check this to allow creating deleting and editing groups in Relationship Maps</inlineHelpText>
    <label>Enable Grouping</label>
    <type>Checkbox</type>
</CustomField>