knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Enable_Omni_Viewer_Context_Menu__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Enable_Omni_Viewer_Context_Menu__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to enable the OmniViewer context menu in the Relationship Map</description>
    <inlineHelpText>Check this to enable the OmniViewer context menu in the Relationship Map</inlineHelpText>
    <label>Enable OmniViewer context Menu</label>
    <type>Checkbox</type>
</CustomField>