knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Enable_Suggested_Contacts_For_RM__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Enable_Suggested_Contacts_For_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow users to see suggested contacts for the relationship map.</description>
    <inlineHelpText>Check this box to allow users to see suggested contacts for the relationship map.</inlineHelpText>
    <label>Enable Suggested Contacts For RM</label>
    <type>Checkbox</type>
</CustomField>