knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Is_Group_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Is_Group_Global_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to use groups that are global (They can show up in other Relationship Maps). Leaving this unchecked will use local groups (These groups will only be visible in this Relationship Map).</description>
    <inlineHelpText>Check this to use groups that are global (They can show up in other Relationship Maps). Leaving this unchecked will use local groups (These groups will only be visible in this Relationship Map).</inlineHelpText>
    <label>Is Group Global Scope</label>
    <type>Checkbox</type>
</CustomField>