knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Is_Relationship_Line_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Is_Relationship_Line_Global_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to use Global Relationship Lines. Leave this unchecked to create and use lines that are visible only in this Relationship Map</description>
    <inlineHelpText>Check this to use Global Relationship Lines. Leave this unchecked to create and use lines that are visible only in this Relationship Map</inlineHelpText>
    <label>Is Relationship Line Global Scope</label>
    <type>Checkbox</type>
</CustomField>