knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Is_Reports_To_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Is_Reports_To_Global_Scope__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Reports To Global Scope</label>
    <type>Checkbox</type>
</CustomField>