knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Lead_Tab__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Lead_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Tab</label>
    <type>Checkbox</type>
</CustomField>