knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Prolifiq_Extended_Tools_URL__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Prolifiq_Extended_Tools_URL__c</fullName>
    <description>External URL for extended features.</description>
    <inlineHelpText>External URL for extended features.</inlineHelpText>
    <label>Prolifiq Extended Tools URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>