knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Reports_To_Line_Opacity__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Reports_To_Line_Opacity__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The opacity of the Contact &apos;Reports To&apos; hierarchy lines.  Set a percentage value between 0% to make the lines hidden and 100% for full visibility.</description>
    <inlineHelpText>The opacity of the Contact &apos;Reports To&apos; hierarchy lines.  Set a percentage value between 0% to make the lines hidden and 100% for full visibility.</inlineHelpText>
    <label>Reports To Line Opacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>