knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Show_Auto_Manual_Toggle__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Auto_Manual_Toggle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Auto Manual Toggle</label>
    <type>Checkbox</type>
</CustomField>