knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Show_Clone_Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Clone_Relationship_Map__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked then the clone button in the dropdown menu of relationship maps will show based on user permissions.  If unchecked this will hide the button regardless of any permissions for users to see the clone button.</description>
    <inlineHelpText>If this is unchecked then no users in the org will see the clone button in the relationship map dropdown menu regardless of what permissions they have set for showing the button.  This is org wide.</inlineHelpText>
    <label>Show Clone Relationship Map</label>
    <type>Checkbox</type>
</CustomField>