knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Show_Empty_Fields__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Empty_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you want fields that have no value to show up. For example, if users don&apos;t have an email it will show [email]. Uncheck this if you want fields that have no value to not show up.</description>
    <inlineHelpText>Check this if you want fields that have no value to show up. For example, if users don&apos;t have an email it will show [email]. Uncheck this if you want fields that have no value to not show up.</inlineHelpText>
    <label>Show Empty Fields</label>
    <type>Checkbox</type>
</CustomField>