knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>keystakeholder</fullName>
            </value>
            <value>
                <fullName>rm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>