knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Org_Setting__c/fields/pqcrush__Use_OmniViewer_For_KeyStakeholders__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Use_OmniViewer_For_KeyStakeholders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to use the OmniViewer for Key Stakeholder details in the Relationship Map</description>
    <inlineHelpText>Check this to use the OmniViewer for Key Stakeholder details in the Relationship Map</inlineHelpText>
    <label>Use OmniViewer for Key Stakeholders</label>
    <type>Checkbox</type>
</CustomField>